tests/errors/c/code-as-seen-by-fbfrog.h
void
f
(
/* Some comment in the
middle of things.*/
int i; /* invalid code */
